# sheetshow

./: .gitattributes  .gitignore  README.md
.githooks/: pre-commit
.github/agents/: accessibility.agent.md  copilot-instructions.md
.github/instructions/: dart-n-flutter.instructions.md
.github/workflows/: client-ci.yml  release.yml  server-ci.yml
.specify/memory/: constitution.md
client/: analysis_options.yaml  installer.iss  pubspec.yaml
client/lib/: main.dart
client/lib/core/models/: enums.dart
client/test/integration/: workspace_import_test.dart
client/test/unit/: enums_test.dart
client/windows/: CMakeLists.txt
client/windows/flutter/: generated_plugins.cmake
client/windows/runner/: CMakeLists.txt  Runner.rc  main.cpp  utils.cpp
client/windows/runner/windows_ink_plugin/: CMakeLists.txt  windows_ink_plugin.cpp  windows_ink_plugin.h
server/: .editorconfig  Directory.Build.props  Dockerfile  SheetShow.sln  docker-compose.yml
server/infra/: main.bicep
server/src/SheetShow.Api/: Program.cs  SheetShow.Api.csproj  appsettings.Development.json  appsettings.json
server/src/SheetShow.Core/: SheetShow.Core.csproj
server/src/SheetShow.Infrastructure/: SheetShow.Infrastructure.csproj
server/tests/SheetShow.IntegrationTests/: SheetShow.IntegrationTests.csproj
server/tests/SheetShow.UnitTests/: SheetShow.UnitTests.csproj
specs/001-sheet-music-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-sheet-music-app/checklists/: requirements.md
specs/001-sheet-music-app/contracts/: rest-api.md  sync-protocol.md
(+106 files in other folders)
